--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fontsource/open-sans": "^4.5.8",
+    "@fontsource/poppins": "^4.5.5",
     "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
     "next": "12.1.4",
