--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
     "gsap": "^3.10.2",
+    "jquery": "^3.6.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-gsap": "^3.2.1",
     "react-hook-form": "^7.29.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-owl-carousel": "^2.3.3",
+    "react-slick": "^0.28.1"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
