--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.7",
-    "@emotion/react": "^11.8.2",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/open-sans": "^4.5.8",
     "@fontsource/poppins": "^4.5.5",
     "axios": "^0.26.1",
-    "framer-motion": "^6.2.8",
+    "framer-motion": "^6.2.9",
     "gsap": "^3.10.2",
     "jquery": "^3.6.0",
     "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-gsap": "^3.2.1",
     "react-hook-form": "^7.29.0",
     "react-icons": "^4.3.1",
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
+    "@types/react": "^17.0.43",
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
