--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-hook-form": "^7.29.0",
     "react-icons": "^4.3.1",
     "react-owl-carousel": "^2.3.3",
-    "react-slick": "^0.28.1"
+    "react-slick": "^0.28.1",
+    "recharts": "^2.1.10"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
