--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/open-sans": "^4.5.8",
     "@fontsource/poppins": "^4.5.5",
     "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
     "framer-motion": "^6.2.9",
     "gsap": "^3.10.2",
     "jquery": "^3.6.0",
