--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fontsource/open-sans": "^4.5.8",
     "@fontsource/poppins": "^4.5.5",
     "axios": "^0.26.1",
+    "chart.js": "^3.8.0",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.9",
     "gsap": "^3.10.2",
     "jquery": "^3.6.0",
     "next": "12.1.4",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "17.0.2",
     "react-gsap": "^3.2.1",
     "react-hook-form": "^7.29.0",
